--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -12,42 +12,42 @@
     <section id="content">
         <div class="content-form">
             <h3>Lista użytkowników forum</h3>
-
         </div>
 
         <div th:if="${users.size() == 0}" class="no-content">
             Na tym forum nie ma jeszcze zarejestrowanych użytkowników.
         </div>
 
-        <div th:if="${users.size() > 0}" class="users-grid">
-            <div class="grid-header">Użytkownik</div>
-            <div class="grid-header">Ranga</div>
-            <div class="grid-header">Płeć</div>
-            <div class="grid-header">Skąd</div>
-            <div class="grid-header">Wiek</div>
-            <div class="grid-header">Data dołączenia</div>
-            <div class="grid-header">Liczba postów</div>
-            <div class="user-row" th:each="fullUserDTO : ${users}">
-                <div class="users-grid-content">
+        <div th:if="${users.size() > 0}" class="users-table">
+            <div class="users-header">Użytkownik</div>
+            <div class="users-header">Ranga</div>
+            <div class="users-header">Płeć</div>
+            <div class="users-header">Skąd</div>
+            <div class="users-header">Wiek</div>
+            <div class="users-header">Data dołączenia</div>
+            <div class="users-header">Liczba postów</div>
+
+            <div class="user-row-wrapper" th:each="fullUserDTO : ${users}">
+                <div class="user-row">
                     <div th:text="${fullUserDTO.user.login}"
                          th:class="${fullUserDTO.user.function == T(com.kuba.forum.model.User.Function).ADMIN} ? 'post-author-admin' : 'post-author'"></div>
                 </div>
-                <div class="users-grid-content">
+                <div class="user-row">
                     <div th:text="${fullUserDTO.user.function}"></div>
                 </div>
-                <div class="users-grid-content">
+                <div class="user-row">
                     <div th:text="${fullUserDTO.user.gender}"></div>
                 </div>
-                <div class="users-grid-content">
+                <div class="user-row">
                     <div th:text="${fullUserDTO.user.place}"></div>
                 </div>
-                <div class="users-grid-content">
+                <div class="user-row">
                     <div th:text="${fullUserDTO.user.getAge()}"></div>
                 </div>
-                <div class="users-grid-content">
+                <div class="user-row">
                     <div th:text="${fullUserDTO.user.getPrettyJoinDate()}"></div>
                 </div>
-                <div class="users-grid-content">
+                <div class="user-row">
                     <div th:text="${fullUserDTO.numberOfPosts}"></div>
                 </div>
             </div>
